refactor: :recycle: skip saving to csv

--- a/employee/eda_employee.ipynb
+++ b/employee/eda_employee.ipynb
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -278,173 +278,6 @@
       "\n",
       "[120 rows x 7 columns]\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>team</th>\n",
-       "      <th>Emp-id</th>\n",
-       "      <th>type</th>\n",
-       "      <th>desc</th>\n",
-       "      <th>Emp-name</th>\n",
-       "      <th>Emp-lastname</th>\n",
-       "      <th>date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>TU-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>TU</td>\n",
-       "      <td>ซ่อม</td>\n",
-       "      <td>a</td>\n",
-       "      <td>aaa</td>\n",
-       "      <td>2020-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>TU-1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>TU</td>\n",
-       "      <td>ซ่อม</td>\n",
-       "      <td>b</td>\n",
-       "      <td>bbb</td>\n",
-       "      <td>2020-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>TU-2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>TU</td>\n",
-       "      <td>ซ่อม</td>\n",
-       "      <td>c</td>\n",
-       "      <td>ccc</td>\n",
-       "      <td>2020-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>TU-2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>TU</td>\n",
-       "      <td>ซ่อม</td>\n",
-       "      <td>d</td>\n",
-       "      <td>ddd</td>\n",
-       "      <td>2020-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>DW-1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>DW</td>\n",
-       "      <td>ติดตั้ง</td>\n",
-       "      <td>e</td>\n",
-       "      <td>eee</td>\n",
-       "      <td>2020-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>DW-1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>DW</td>\n",
-       "      <td>ติดตั้ง</td>\n",
-       "      <td>h</td>\n",
-       "      <td>hhh</td>\n",
-       "      <td>2020-01-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>DW-2</td>\n",
-       "      <td>9</td>\n",
-       "      <td>DW</td>\n",
-       "      <td>ติดตั้ง</td>\n",
-       "      <td>I</td>\n",
-       "      <td>iii</td>\n",
-       "      <td>2020-01-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>117</th>\n",
-       "      <td>DW-1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>DW</td>\n",
-       "      <td>ติดตั้ง</td>\n",
-       "      <td>j</td>\n",
-       "      <td>jjj</td>\n",
-       "      <td>2020-01-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>118</th>\n",
-       "      <td>SALE-2</td>\n",
-       "      <td>11</td>\n",
-       "      <td>SALE</td>\n",
-       "      <td>ขาย</td>\n",
-       "      <td>k</td>\n",
-       "      <td>kkk</td>\n",
-       "      <td>2020-01-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>119</th>\n",
-       "      <td>SALE-2</td>\n",
-       "      <td>12</td>\n",
-       "      <td>SALE</td>\n",
-       "      <td>ขาย</td>\n",
-       "      <td>l</td>\n",
-       "      <td>lll</td>\n",
-       "      <td>2020-01-10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>120 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       team  Emp-id  type     desc Emp-name Emp-lastname       date\n",
-       "0      TU-1       1    TU     ซ่อม        a          aaa 2020-01-01\n",
-       "1      TU-1       2    TU     ซ่อม        b          bbb 2020-01-01\n",
-       "2      TU-2       3    TU     ซ่อม        c          ccc 2020-01-01\n",
-       "3      TU-2       4    TU     ซ่อม        d          ddd 2020-01-01\n",
-       "4      DW-1       5    DW  ติดตั้ง        e          eee 2020-01-01\n",
-       "..      ...     ...   ...      ...      ...          ...        ...\n",
-       "115    DW-1       8    DW  ติดตั้ง        h          hhh 2020-01-10\n",
-       "116    DW-2       9    DW  ติดตั้ง        I          iii 2020-01-10\n",
-       "117    DW-1      10    DW  ติดตั้ง        j          jjj 2020-01-10\n",
-       "118  SALE-2      11  SALE      ขาย        k          kkk 2020-01-10\n",
-       "119  SALE-2      12  SALE      ขาย        l          lll 2020-01-10\n",
-       "\n",
-       "[120 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -473,7 +306,7 @@
     "result_df = display_result_df(df=filtered_df)\n",
     "\n",
     "# save result\n",
-    "result_df.to_csv(target_file_location, header=True)"
+    "# result_df.to_csv(target_file_location, header=True)"
    ]
   }
  ],
